<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvInfoReviewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_12"
        android:layout_marginTop="@dimen/dimen_10"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/notosans_semi_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_text_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/table_color" />

    <TextView
        android:id="@+id/tvInfoReviewDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_12"
        android:layout_marginEnd="@dimen/dimen_12"
        android:fontFamily="@font/notosans_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_text_size_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvInfoReviewTitle"
        app:layout_constraintTop_toBottomOf="@id/tvInfoReviewTitle"
        tools:text="@string/test_text_long" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:fontFamily="@font/notosans_regular"
        android:textColor="@color/gray_light"
        android:textSize="@dimen/dimen_text_size_12"
        app:layout_constraintStart_toStartOf="@id/tvInfoReviewDescription"
        app:layout_constraintTop_toBottomOf="@id/tvInfoReviewDescription"
        android:text="@string/time_post" />

</androidx.constraintlayout.widget.ConstraintLayout>
