<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@drawable/shape_bg_white_stroke_corner_8">

    <ImageView
        android:id="@+id/ivRelativeProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_8"
        android:src="@drawable/img_product_relative"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvRelativeProductSale" />

    <TextView
        android:id="@+id/tvRelativeProductSale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_16"
        android:fontFamily="@font/notosans_medium"
        android:text="@string/sales"
        android:textColor="@color/red_tpA"
        android:textSize="@dimen/dimen_text_size_12"
        app:layout_constraintStart_toEndOf="@id/ivRelativeProduct"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRelativeProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosans_medium"
        android:text="@string/name_product_sale"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_text_size_14"
        app:layout_constraintStart_toStartOf="@id/tvRelativeProductSale"
        app:layout_constraintTop_toBottomOf="@id/tvRelativeProductSale" />

    <com.example.devfeandroid.presentation.widget.saleview.SaleView
        android:id="@+id/svRelativeProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvRelativeProductName"
        app:layout_constraintTop_toBottomOf="@id/tvRelativeProductName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_4"
        android:fontFamily="@font/notosans_regular"
        android:text="@string/convert_money"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_text_size_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/svRelativeProduct"
        app:layout_constraintTop_toBottomOf="@id/svRelativeProduct" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_20"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
